--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Log in to registry
         uses: docker/login-action@v2
         with:
-          registry: ghcr.io             # or 'docker.io' for Docker Hub
+          registry: docker.io             # or 'ghcr.io' 
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
 
@@ -28,4 +28,4 @@ jobs:
           context: services/hello-service
           file: services/hello-service/Dockerfile
           push: true
-          tags: ghcr.io/${{ secrets.REGISTRY_USERNAME }}/hello-service:latest
+          tags: docker.io/${{ secrets.REGISTRY_USERNAME }}/hello-service:latest
