--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,7 +7,6 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -18,7 +17,7 @@ jobs:
       - name: Log in to registry
         uses: docker/login-action@v2
         with:
-          registry: docker.io             # or 'ghcr.io' 
+          registry: docker.io
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
 
@@ -29,3 +28,49 @@ jobs:
           file: services/hello-service/Dockerfile
           push: true
           tags: docker.io/${{ secrets.REGISTRY_USERNAME }}/hello-service:latest
+
+  deploy-infra:
+    needs: build-and-push
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id:     ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region:            us-west-1
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.5.7
+
+      - name: Cache Terraform plugins
+        uses: actions/cache@v3
+        with:
+          path: infra/terraform/.terraform
+          key: ${{ runner.os }}-terraform-${{ hashFiles('infra/terraform/*.tf*') }}
+
+      - name: Terraform Init & Apply
+        working-directory: infra/terraform
+        run: |
+          terraform init
+          terraform apply -auto-approve -var-file=terraform.tfvars
+
+      - name: Setup kubectl
+        uses: azure/setup-kubectl@v3
+        with:
+          version: v1.27.16
+
+      - name: Update kubeconfig
+        run: |
+          aws eks update-kubeconfig \
+            --name agentops-eks \
+            --region us-west-1
+
+      - name: Deploy k8s manifests
+        run: |
+          kubectl apply -f infra/k8s/
