--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 infra/terraform/.terraform/
 infra/terraform/terraform.tfstate*
 infra/terraform/.terraform.lock.hcl
+# Terraform local state
+infra/terraform/terraform.tfstate
+infra/terraform/terraform.tfstate.backup
+infra/terraform/.terraform/
