--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ infra/terraform/.terraform.lock.hcl
 infra/terraform/terraform.tfstate
 infra/terraform/terraform.tfstate.backup
 infra/terraform/.terraform/
+venv/
